--- a/src/ElectronicDataInterchange.Application/ElectronicDataInterchange.Application.csproj
+++ b/src/ElectronicDataInterchange.Application/ElectronicDataInterchange.Application.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ElectronicDataInterchange.Domain\ElectronicDataInterchange.Domain.csproj" />
+    <ProjectReference Include="..\ElectronicDataInterchange.Infrastructure\ElectronicDataInterchange.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
